@@ -52,6 +52,7 @@ Template for new versions:
 - `caravan`: fix errors in trade dialog if all fort items are traded away while the trade dialog is showing fort items and the `confirm` trade confirmation is shown
 - `control-panel`: restore non-default values of per-save enabled/disabled settings for repeat-based commands
 - `confirm`: fix confirmation prompt for overwriting a hotkey zoom location
+- `quickfort`: allow farm plots to be built on muddy stone
 
 ## Misc Improvements
 - `gui/launcher`: "space space to toggle pause" behavior is skipped if the game was paused when `gui/launcher` came up to prevent accidental unpausing
